# mcp-cli-host

./: README-zh.md  README.md  main.py  pyproject.toml
.github/workflows/: semgrep.yml
docs/: prompts_usage.md  resource_templates_implements.md
docs/zh/: prompts_usage.md  resource_templates_implements.md
examples/server-require-sampling/: README.md  pyproject.toml
examples/server-require-sampling/src/server_require_sampling/: server.py  utils.py
mcp_cli_host/cmd/: app.py  mcp.py  stdio_client.py  utils.py
mcp_cli_host/cmd/mcp_client_functions/: elicitation_handler.py  err_monitor.py  notification_handler.py  roots_handler.py  sampling_handler.py
mcp_cli_host/llm/: base_provider.py  models.py
mcp_cli_host/llm/azure/: models.py  provider.py
mcp_cli_host/llm/deepseek/: provider.py
mcp_cli_host/llm/gemini/: provider.py
mcp_cli_host/llm/ollama/: models.py  provider.py
mcp_cli_host/llm/openai/: provider.py
