[project]
name = "mcp-cli-host"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
]

[project.scripts]
mcpclihost = "mcp_cli_host.cmd.app:run"

[tool.uv.workspace]
members = [
    "examples/server-require-sampling",
]
