[project]
name = "server-require-sampling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.9.0",
    "click>=8.1.8",
    "mcp>=1.6.0",
]


[project.scripts]
server-require-sampling = "server_require_sampling.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

